--- a/DataGridView_Import_Excel_CS/NordubbCheckRoles.csproj
+++ b/DataGridView_Import_Excel_CS/NordubbCheckRoles.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4B2223EA-A2FF-45E4-BD0D-A81351EC8384}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataGridView_Import_Excel</RootNamespace>
-    <AssemblyName>DataGridView_Import_Excel</AssemblyName>
+    <RootNamespace>NordubbCheckRoles</RootNamespace>
+    <AssemblyName>NordubbCheckRoles</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -83,6 +83,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Windows.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ClosedXML, Version=0.76.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
       <HintPath>..\packages\ClosedXML.0.76.0\lib\net40-client\ClosedXML.dll</HintPath>
@@ -105,17 +108,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Productions.cs" />
-    <Compile Include="ExcelScanning.cs" />
+    <Compile Include="Models\ExcelScanning.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="PrintResult.cs" />
+    <Compile Include="Models\PrintResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScanFolder.cs" />
+    <Compile Include="Models\ScanFolder.cs" />
     <Compile Include="ScriptView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +171,9 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Windows.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
