--- a/DataGridView_Import_Excel_CS/NordubbCheckRoles.csproj
+++ b/DataGridView_Import_Excel_CS/NordubbCheckRoles.csproj
@@ -86,6 +86,7 @@
   <PropertyGroup>
     <ApplicationIcon>Recources\CheckIcon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="ClosedXML, Version=0.76.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
       <HintPath>..\packages\ClosedXML.0.76.0\lib\net40-client\ClosedXML.dll</HintPath>
@@ -109,7 +110,6 @@
   <ItemGroup>
     <Compile Include="Backup.cs" />
     <Compile Include="Models\OpeningFileMethods.cs" />
-    <Compile Include="Models\Productions.cs" />
     <Compile Include="Models\ExcelScanning.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -120,13 +120,6 @@
     <Compile Include="Models\PrintResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\ScanFolder.cs" />
-    <Compile Include="ScriptView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ScriptView.Designer.cs">
-      <DependentUpon>ScriptView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Models\Utils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -141,11 +134,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ScriptView.resx">
-      <DependentUpon>ScriptView.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="DataGridView_Import_Excel_CS_TemporaryKey.pfx" />
+    <None Include="NordubbCheckRoles.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -177,7 +167,12 @@
   <ItemGroup>
     <Content Include="Recources\CheckIcon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\NordubbCheckRolesLibrary\NordubbCheckRolesLibrary.csproj">
+      <Project>{95eac756-5921-4a1b-af6d-234b50f4c25c}</Project>
+      <Name>NordubbCheckRolesLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
