--- a/NordubbCheckRolesLibrary/NordubbCheckRolesLibrary.csproj
+++ b/NordubbCheckRolesLibrary/NordubbCheckRolesLibrary.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculations.cs" />
+    <Compile Include="ExcelScanning.cs" />
+    <Compile Include="OpeningFileMethods.cs" />
+    <Compile Include="PrintResult.cs" />
     <Compile Include="Productions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanFolder.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
